--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -17542,6 +17542,112 @@
 "~^/static/collapse$" "/static/collapse.js";
 "~^/doc/economics/mechanism-design/favicon.ico$" "/static/img/favicon.ico";
 "~^/doc/cs/security/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html/favicon.ico$" "/static/img/favicon.ico";
+"~^/\$url\$.md$" "/static/404";
+"~^/deathnote$" "/death-note-anonymity";
+"~^/doc/ai/poetr$" "/doc/ai/poetry/index";
+"~^/doc/anime/eva/1996-animerica-conscience-otaking.md$" "/doc/anime/eva/1996-animerica-conscience";
+"~^/abt_byrn.html$" "/doc/biology/2000-iapac-norvir/abt_byrn.html";
+"~^/doc/adherence.html$" "/doc/biology/2000-iapac-norvir/adherence.html";
+"~^/doc/committee.html$" "/doc/biology/2000-iapac-norvir/committee.html";
+"~^/doc/biology/tolerability/committee.html$" "/doc/biology/2000-iapac-norvir/committee.html";
+"~^/doc/consequences.html$" "/doc/biology/2000-iapac-norvir/consequences.html";
+"~^/doc/biology/tolerability/consequences.html$" "/doc/biology/2000-iapac-norvir/consequences.html";
+"~^/doc/description.html$" "/doc/biology/2000-iapac-norvir/description.html";
+"~^/doc/biology/tolerability/description.html$" "/doc/biology/2000-iapac-norvir/description.html";
+"~^/doc/faq.html$" "/doc/biology/2000-iapac-norvir/faq.html";
+"~^/doc/biology/tolerability/faq.html$" "/doc/biology/2000-iapac-norvir/faq.html";
+"~^/doc/help.html$" "/doc/biology/2000-iapac-norvir/help.html";
+"~^/doc/biology/tolerability/help.html$" "/doc/biology/2000-iapac-norvir/help.html";
+"~^/ina100cw1.html$" "/doc/biology/2000-iapac-norvir/ina100cw1.html";
+"~^/doc/ina100cw1.html$" "/doc/biology/2000-iapac-norvir/ina100cw1.html";
+"~^/doc/biology/tolerability/links.html$" "/doc/biology/2000-iapac-norvir/links.html";
+"~^/doc/list.html$" "/doc/biology/2000-iapac-norvir/list.html";
+"~^/doc/biology/tolerability/list.html$" "/doc/biology/2000-iapac-norvir/list.html";
+"~^/doc/biology/about/nav_aboutIAPAC.gif$" "/doc/biology/2000-iapac-norvir/nav_aboutIAPAC.gif";
+"~^/doc/otherreg.html$" "/doc/biology/2000-iapac-norvir/otherreg.html";
+"~^/doc/physref.html$" "/doc/biology/2000-iapac-norvir/physref.html";
+"~^/doc/biology/tolerability/portability.html$" "/doc/biology/2000-iapac-norvir/portability.html";
+"~^/doc/portability/farthingport.html$" "/doc/biology/2000-iapac-norvir/portability/farthingport.html";
+"~^/doc/share.html$" "/doc/biology/2000-iapac-norvir/share.html";
+"~^/doc/biology/tolerability/share.html$" "/doc/biology/2000-iapac-norvir/share.html";
+"~^/doc/temperature.html$" "/doc/biology/2000-iapac-norvir/temperature.html";
+"~^/doc/biology/tolerability/temperature.html$" "/doc/biology/2000-iapac-norvir/temperature.html";
+"~^/doc/tolerability.html$" "/doc/biology/2000-iapac-norvir/tolerability.html";
+"~^/tolerability/tolerability.html$" "/doc/biology/2000-iapac-norvir/tolerability.html";
+"~^/doc/biology/tolerability/tolerability/abt_dintruff_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol1.html";
+"~^/doc/biology/tolerability/tolerability/abt_dintruff_tol2.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol2.html";
+"~^/doc/biology/tolerability/tolerability/abt_lichter_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_lichter_tol1.html";
+"~^/doc/biology/tolerability/tolerability/butcher.html$" "/doc/biology/2000-iapac-norvir/tolerability/butcher.html";
+"~^/doc/biology/tolerability/tolerability/cohen.html$" "/doc/biology/2000-iapac-norvir/tolerability/cohen.html";
+"~^/doc/biology/tolerability/tolerability/dejar_alc.html$" "/doc/biology/2000-iapac-norvir/tolerability/dejar_alc.html";
+"~^/doc/biology/tolerability/tolerability/farthing.html$" "/doc/biology/2000-iapac-norvir/tolerability/farthing.html";
+"~^/doc/biology/tolerability/tolerability/henry.html$" "/doc/biology/2000-iapac-norvir/tolerability/henry.html";
+"~^/doc/biology/tolerability/tolerability/hirschhorntips.html$" "/doc/biology/2000-iapac-norvir/tolerability/hirschhorntips.html";
+"~^/doc/biology/tolerability/tolerability/royaltips.html$" "/doc/biology/2000-iapac-norvir/tolerability/royaltips.html";
+"~^/doc/whatsnew.html$" "/doc/biology/2000-iapac-norvir/whatsnew.html";
+"~^/doc/darknet-market/aakoven-profile$" "/doc/darknet-markets/aakoven-profile.maff";
+"~^/Socks/index$" "/doc/index";
+"~^/doc/modafinil/darknet-market/2015-04-762$" "/doc/modafinil/darknet-market/";
+"~^/doc/technology/i$" "/doc/technology/index";
+"~^/doc/2009-ortega\.pdf.*$" "/doc/wikipedia/2009-ortega.pdf";
+"~^/doc/reinforcement-learning/model/alphago/www/arxiv.org/1978852377013f62c322a83926e8de32b123c44d\.pdf.*$" "/doc/www/arxiv.org/1978852377013f62c322a83926e8de32b123c44d.pdf";
+"~^/doc/reinforcement-learning/model/alphago/www/arxiv.org/1f587d962dc8415687cce2659b69a35e637cf6d9\.pdf.*$" "/doc/www/arxiv.org/1f587d962dc8415687cce2659b69a35e637cf6d9.pdf";
+"~^/doc/philosophy/ontology/www/arxiv.org/23b2c7c6bbe3ea5ac3cbe891c44013f4d5bd27a2\.pdf.*$" "/doc/www/arxiv.org/23b2c7c6bbe3ea5ac3cbe891c44013f4d5bd27a2.pdf";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/29cf6b5749b5655c16049e5b36321017034a4b86\.pdf.*$" "/doc/www/arxiv.org/29cf6b5749b5655c16049e5b36321017034a4b86.pdf";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/2cbca7d1d6d98c5d73bbc59d561ae889a8fd8449\.pdf.*$" "/doc/www/arxiv.org/2cbca7d1d6d98c5d73bbc59d561ae889a8fd8449.pdf";
+"~^/doc/cs/algorithm/www/arxiv.org/3dca056b6958521c0d4bf7754114ed5b55ba3f9f\.pdf.*$" "/doc/www/arxiv.org/3dca056b6958521c0d4bf7754114ed5b55ba3f9f.pdf";
+"~^/doc/reinforcement-learning/scaling/www/arxiv.org/66325c548edfad6fd2dafbdce1664d0b3e05d924\.pdf.*$" "/doc/www/arxiv.org/66325c548edfad6fd2dafbdce1664d0b3e05d924.pdf";
+"~^/doc/cs/computable/www/arxiv.org/6a7449f7df5ced2edfd22dce377828c8f2ee389b\.pdf.*$" "/doc/www/arxiv.org/6a7449f7df5ced2edfd22dce377828c8f2ee389b.pdf";
+"~^/doc/statistics/probability/www/arxiv.org/86d8a76d05629e2486177a4bde89db45f2d11e85\.pdf.*$" "/doc/www/arxiv.org/86d8a76d05629e2486177a4bde89db45f2d11e85.pdf";
+"~^/doc/statistics/probability/www/arxiv.org/8746ce0e5021d794deca0625582c160c507b4ec1\.pdf.*$" "/doc/www/arxiv.org/8746ce0e5021d794deca0625582c160c507b4ec1.pdf";
+"~^/doc/cs/algorithm/www/arxiv.org/a3c962b53eaa1d01762d2a9814702b47ff38eacc\.pdf.*$" "/doc/www/arxiv.org/a3c962b53eaa1d01762d2a9814702b47ff38eacc.pdf";
+"~^/doc/reinforcement-learning/model/alphago/www/arxiv.org/a4610f464f0a900d7ca16f652c2cf81b21dc2fc8\.pdf.*$" "/doc/www/arxiv.org/a4610f464f0a900d7ca16f652c2cf81b21dc2fc8.pdf";
+"~^/doc/statistics/decision/www/arxiv.org/a4842ddaf6bd37a8cfce166d77c714cb62ef0ed4\.pdf.*$" "/doc/www/arxiv.org/a4842ddaf6bd37a8cfce166d77c714cb62ef0ed4.pdf";
+"~^/doc/statistics/probability/www/arxiv.org/ada309cc838c9d4630c223f6bbe87df4725c526e\.pdf.*$" "/doc/www/arxiv.org/ada309cc838c9d4630c223f6bbe87df4725c526e.pdf";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/b623df892b51cfc567329d9e53ab1af17a8740ad\.pdf.*$" "/doc/www/arxiv.org/b623df892b51cfc567329d9e53ab1af17a8740ad.pdf";
+"~^/doc/statistics/probability/www/arxiv.org/b86b150dffd55f72e839f6c8bc0494594df4f658\.pdf.*$" "/doc/www/arxiv.org/b86b150dffd55f72e839f6c8bc0494594df4f658.pdf";
+"~^/doc/cs/algorithm/www/arxiv.org/b8ce2a810a53c24431053cf2da7a2d2f441e98b5\.pdf.*$" "/doc/www/arxiv.org/b8ce2a810a53c24431053cf2da7a2d2f441e98b5.pdf";
+"~^/doc/statistics/decision/www/arxiv.org/b90dec9be045dc8b8a9940b083c3894a2c7df997\.pdf.*$" "/doc/www/arxiv.org/b90dec9be045dc8b8a9940b083c3894a2c7df997.pdf";
+"~^/doc/reinforcement-learning/scaling/www/arxiv.org/ce54be912a7192483c027c22c5fa8ff05e01ec77\.pdf.*$" "/doc/www/arxiv.org/ce54be912a7192483c027c22c5fa8ff05e01ec77.pdf";
+"~^/doc/philosophy/ethics/www/arxiv.org/cfbf9920e45cf380db92dc7dccff139a9f520376\.pdf.*$" "/doc/www/arxiv.org/cfbf9920e45cf380db92dc7dccff139a9f520376.pdf";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/ed6c32c06d89d1b5abdbdbb2cbb7beff2a2efed9\.pdf.*$" "/doc/www/arxiv.org/ed6c32c06d89d1b5abdbdbb2cbb7beff2a2efed9.pdf";
+"~^/doc/cs/algorithm/www/arxiv.org/ef7b9626134d5de8eca3c7cb20e96bcc1734fec9\.pdf.*$" "/doc/www/arxiv.org/ef7b9626134d5de8eca3c7cb20e96bcc1734fec9.pdf";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/ff00e088473c6a80a44a615759c8fbca2becc121\.pdf.*$" "/doc/www/arxiv.org/ff00e088473c6a80a44a615759c8fbca2becc121.pdf";
+"~^/doc/cs/r/www/cran.r-project.org/80873627f7ed35f9c0aecf868f7eb7533a1c4c35\.pdf.*$" "/doc/www/cran.r-project.org/80873627f7ed35f9c0aecf868f7eb7533a1c4c35.pdf";
+"~^/doc/genetics/gametogenesis/www/fatstemserbia.brinkster.net/58abe151a4025bcbeeab4ca6204cc7f12e629b49\.pdf.*$" "/doc/www/fatstemserbia.brinkster.net/58abe151a4025bcbeeab4ca6204cc7f12e629b49.pdf";
+"~^/doc/ai/nn/transformer/gpt/www/openreview.net/479788474b993a2471c9ed896797c710fc641717\.pdf.*$" "/doc/www/openreview.net/479788474b993a2471c9ed896797c710fc641717.pdf";
+"~^/doc/cs/algorithm/www/openreview.net/54b149cefe1fbbe841975209b4840fa04086a701\.pdf.*$" "/doc/www/openreview.net/54b149cefe1fbbe841975209b4840fa04086a701.pdf";
+"~^/doc/ai/anime/danbooru/www/openreview.net/c6c233b9555cf63c7d8a50d49f61b1b39e31aeb5\.pdf.*$" "/doc/www/openreview.net/c6c233b9555cf63c7d8a50d49f61b1b39e31aeb5.pdf";
+"~^/doc/sociology/www/scholar.harvard.edu/e848533e4ef3b0b9b2b2237c4de2d93f1dc5301a\.pdf.*$" "/doc/www/scholar.harvard.edu/e848533e4ef3b0b9b2b2237c4de2d93f1dc5301a.pdf";
+"~^/doc/dual-n-back/www/scottbarrykaufman.com/95805166e4a87f42e1b1196d7b982e528306c36b\.pdf.*$" "/doc/www/scottbarrykaufman.com/95805166e4a87f42e1b1196d7b982e528306c36b.pdf";
+"~^/doc/philosophy/ethics/www/subcortex.com/e23adeb0775f6effd4de3510513abf18d8d71e1c\.pdf.*$" "/doc/www/subcortex.com/e23adeb0775f6effd4de3510513abf18d8d71e1c.pdf";
+"~^/doc/reinforcement-learning/safe/www/www.aleph.se/6ce5a92081cd2bfb0fde707fef7b2e7a1471372d\.pdf.*$" "/doc/www/www.aleph.se/6ce5a92081cd2bfb0fde707fef7b2e7a1471372d.pdf";
+"~^/doc/ai/nn/transformer/www/www.ijcai.org/eb58befadf2db6c1d3e6ab317e62e82c04eb9b05\.pdf.*$" "/doc/www/www.ijcai.org/eb58befadf2db6c1d3e6ab317e62e82c04eb9b05.pdf";
+"~^/doc/psychology/spaced-repetition/www/www.ncbi.nlm.nih.gov/2827e00cfdd92c27c95ed4fb50b81cd8748ee277\.pdf.*$" "/doc/www/www.ncbi.nlm.nih.gov/2827e00cfdd92c27c95ed4fb50b81cd8748ee277.pdf";
+"~^/doc/genetics/sequencing/www/www.ncbi.nlm.nih.gov/29a3cf827c290bdaee6b29597e4b92577e2ca173\.pdf.*$" "/doc/www/www.ncbi.nlm.nih.gov/29a3cf827c290bdaee6b29597e4b92577e2ca173.pdf";
+"~^/note/[0-9]$" "/note/index";
+"~^//gwern.net/index.md$" "/note/index.md";
+"~^/note/Lions.md$" "/note/lions";
+"~^/robots.txt/$" "/robots.txt";
+"~^/static/rest_framework/css/default.css$" "/static/css/default.css";
+"~^/static/js/darkmode$" "/static/js/dark-mode.js";
+"~^/review/bridge$" "/review/the-bridge";
+"~^/Slowing-Moore\?utm.*$" "/slowing-moore";
+"~^/doc/psychology/personality/conscientiousness/1994-krueg$" "/doc/psychology/personality/conscientiousness/1994-krueger.pdf";
+"~^/doc/crime/terrorism/rumiyah/2016-rumiyah-05\.pdf.*$" "/doc/crime/terrorism/rumiyah/2017-rumiyah-05.pdf";
+"~^/doc/biology/tolerability/ask.html/.*$" "/doc/biology/tolerability/ask.html";
+"~^/subsimulatorgpt2$" "https://www.old.reddit.com/SubSimulatorGPT2Meta/comments/ccvspt/update_experimenting_with_generating_hybrid/";
+"~^/note/Daicon-videos/index$" "/note/daicon-videos";
+"~^/https/www.edge.org/conversation/gin-television-and-cognitive-surplus$" "https://www.edge.org/conversation/gin-television-and-cognitive-surplus";
+"~^/fiction/Menard/.*$" "/fiction/menard";
+"~^/doc/rotten.com/library/bio/religion/televangelists/patrobertson/index$" "/doc/rotten.com/library/bio/religion/televangelists/pat-robertson/index.html";
+"~^/doc/psvchologv/okcupid/the4bigmvthsofprofilepictures.html$" "/doc/psychology/okcupid/the4bigmythsofprofilepictures.html";
+"~^/doc/maildelivery/%C2%BF$" "/doc/mail-delivery/index";
+"~^/doc/iq/2017-flynn.pdf\..*$" "/doc/iq/2017-flynn.pdf";
+"~^/doc/fiction/2009-12-18-%EF%BF%BD%EF%BF%BD$" "/doc/anime/2009-12-18-緑華野菜子-pixiv7701090-greenseevee-encolor.tar";
+"~^/doc/dnb/2009-argumzio-pentuple-nback.avi$" "/doc/dual-n-back/2009-argumzio-pentuple-nback.mp4";
+"~^/doc/ai/nn/transformer/gpt/-monologue-int%C3%83%C2%A9rieur/index$" "/doc/ai/nn/transformer/gpt/inner-monologue/index";
+"~^/doc/ai/2018-cotra\.pdf.*$" "/doc/ai/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/mraid.js$" "/static/404";
