--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -17648,6 +17648,98 @@
 "~^/doc/dnb/2009-argumzio-pentuple-nback.avi$" "/doc/dual-n-back/2009-argumzio-pentuple-nback.mp4";
 "~^/doc/ai/nn/transformer/gpt/-monologue-int%C3%83%C2%A9rieur/index$" "/doc/ai/nn/transformer/gpt/inner-monologue/index";
 "~^/doc/ai/2018-cotra\.pdf.*$" "/doc/ai/index";
+"~^/princess-kaguya.*$" "/review/princess-kaguya";
+"~^/review/the-tale-of-the-princess.*$" "/review/princess-kaguya";
+"~^/review/the-princess-kaguya.*$" "/review/princess-kaguya";
+"~^/review/kaguya.*$" "/review/princess-kaguya";
+"~^/kaguya.*$" "/review/princess-kaguya";
+"~^/tale-of-the-princess-kaguya.*$" "/review/princess-kaguya";
+"~^/review/the-tale-of-princess-kaguya.*$" "/review/princess-kaguya";
+"~^/doc/statistics/decision/1995-tengs.pdf%5C.*$" "/doc/statistics/decision/1995-tengs.pdf";
+"~^/Hydrocephalus/.*$" "/hydrocephalus";
+"~^/.*%7B%7B%20revealButtonHref.*$" "/static/404";
+"~^/review/the-the-bridge$" "/review/the-bridge";
+"~^/doc/statistics/causality/www.*$" "/doc/statistics/causality/index";
+"~^/doc/biology/about/index$" "/doc/biology/index";
+"~^/doc/anime/eva/2002-takeda-notenk$" "/doc/anime/eva/2002-takeda-notenkimemoirs";
+"~^/DNB-FAQ_HEAD.*$" "/dnb-faq";
+"~^/static/font/dropcap/ninit/light/C-floral-2.svg$" "/static/font/dropcap/ninit/light/C-floral-light-2.svg";
+"~^/static/drop-cap/$" "/static/font/drop-cap/";
+"~^/static/build/build_template_versions.php$" "/static/build/index";
+"~^/Dog-Cloning-For-Spe-cial-Forces:-Breed-All-You-Can-Breed$" "/clone";
+"~^/doc/psychiatry/search$" "/search";
+"~^/doc/philosophy/epistemology/%C2%BF.*$" "/doc/philosophy/epistemology/";
+"~^/doc/nicotine/2019-hajek$" "/doc/nicotine/2019-hajek.pdf";
+"~^/doc/iq/high/smpy/1993-bock$" "/doc/iq/high/smpy/1993-bock-theoriginanddevelopmentofhighability.pdf";
+"~^/doc/genetic/heritable/dog/1965-scottgeneticsandthesocialbehaviorofthedog\.pdf.*$" "/doc/genetics/heritable/dog/1965-scott-geneticsandthesocialbehaviorofthedog.pdf";
+"~^/doc/anime/eva/notenki-memoirs/gwern.net$" "/doc/anime/eva/notenki-memoirs/notenki-memoirs";
+"~^/doc/ai/1986-michie-onmachineintelligence.pdf\).*$" "/doc/ai/1986-michie-onmachineintelligence.pdf";
+"~^/doc/2011-june-.*.jpg$" "/static/404";
+"~^/Dog-cloning$" "/clone";
+"~^/crops.md$" "/crop.md";
+"~^/doc/abt_byrn.html$" "/doc/biology/2000-iapac-norvir/abt_byrn.html";
+"~^/doc/abt_dintruff.html$" "/doc/biology/2000-iapac-norvir/abt_dintruff.html";
+"~^/doc/abt_lichter.html$" "/doc/biology/2000-iapac-norvir/abt_lichter.html";
+"~^/doc/abt_sun.html$" "/doc/biology/2000-iapac-norvir/abt_sun.html";
+"~^/tolerability/ask.html$" "/doc/biology/2000-iapac-norvir/ask.html";
+"~^/doc/biology/about/committee.html$" "/doc/biology/2000-iapac-norvir/committee.html";
+"~^/doc/biology/about/conseq/faqcons1.html$" "/doc/biology/2000-iapac-norvir/conseq/faqcons1.html";
+"~^/doc/biology/about/consequences.html$" "/doc/biology/2000-iapac-norvir/consequences.html";
+"~^/tolerability/faq.html$" "/doc/biology/2000-iapac-norvir/faq.html";
+"~^/doc/farthing_sun.html$" "/doc/biology/2000-iapac-norvir/farthing_sun.html";
+"~^/ina101b.html$" "/doc/biology/2000-iapac-norvir/ina101b.html";
+"~^/doc/ina101b.html$" "/doc/biology/2000-iapac-norvir/ina101b.html";
+"~^/ina102b.html$" "/doc/biology/2000-iapac-norvir/ina102b.html";
+"~^/doc/ina102b.html$" "/doc/biology/2000-iapac-norvir/ina102b.html";
+"~^/ina103a.html$" "/doc/biology/2000-iapac-norvir/ina103a.html";
+"~^/doc/ina103a.html$" "/doc/biology/2000-iapac-norvir/ina103a.html";
+"~^/doc/biology/about/otherreg.html$" "/doc/biology/2000-iapac-norvir/otherreg.html";
+"~^/doc/biology/about/portability.html$" "/doc/biology/2000-iapac-norvir/portability.html";
+"~^/doc/regimens/fortalg.html$" "/doc/biology/2000-iapac-norvir/regimens/fortalg.html";
+"~^/doc/regimens/stadtlanders.html$" "/doc/biology/2000-iapac-norvir/regimens/stadtlanders.html";
+"~^/doc/regimens/tebas.html$" "/doc/biology/2000-iapac-norvir/regimens/tebas.html";
+"~^/doc/biology/about/search.html$" "/doc/biology/2000-iapac-norvir/search.html";
+"~^/doc/biology/about/share.html$" "/doc/biology/2000-iapac-norvir/share.html";
+"~^/doc/shoofs.html$" "/doc/biology/2000-iapac-norvir/shoofs.html";
+"~^/tolerability/temperature.html$" "/doc/biology/2000-iapac-norvir/temperature.html";
+"~^/doc/biology/about/temperature/abt_lichter_temp1.html$" "/doc/biology/2000-iapac-norvir/temperature/abt_lichter_temp1.html";
+"~^/doc/temperature/abt_lichter_temp1.html$" "/doc/biology/2000-iapac-norvir/temperature/abt_lichter_temp1.html";
+"~^/doc/biology/about/temperature/abt_sum_temp1.html$" "/doc/biology/2000-iapac-norvir/temperature/abt_sum_temp1.html";
+"~^/doc/temperature/abt_sum_temp1.html$" "/doc/biology/2000-iapac-norvir/temperature/abt_sum_temp1.html";
+"~^/doc/biology/about/temperature/farthingtemp.html$" "/doc/biology/2000-iapac-norvir/temperature/farthingtemp.html";
+"~^/doc/temperature/farthingtemp.html$" "/doc/biology/2000-iapac-norvir/temperature/farthingtemp.html";
+"~^/doc/biology/about/temperature/sun.html$" "/doc/biology/2000-iapac-norvir/temperature/sun.html";
+"~^/doc/temperature/sun.html$" "/doc/biology/2000-iapac-norvir/temperature/sun.html";
+"~^/doc/biology/about/tolerability.html$" "/doc/biology/2000-iapac-norvir/tolerability.html";
+"~^/doc/tolerability/abt_dintruff_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol1.html";
+"~^/doc/tolerability/abt_dintruff_tol2.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol2.html";
+"~^/doc/tolerability/abt_lichter_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_lichter_tol1.html";
+"~^/tolerability/tolerability/abt_lichter_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_lichter_tol1.html";
+"~^/doc/tolerability/butcher.html$" "/doc/biology/2000-iapac-norvir/tolerability/butcher.html";
+"~^/doc/tolerability/cohen.html$" "/doc/biology/2000-iapac-norvir/tolerability/cohen.html";
+"~^/doc/tolerability/dejar_alc.html$" "/doc/biology/2000-iapac-norvir/tolerability/dejar_alc.html";
+"~^/doc/tolerability/farthing.html$" "/doc/biology/2000-iapac-norvir/tolerability/farthing.html";
+"~^/doc/tolerability/henry.html$" "/doc/biology/2000-iapac-norvir/tolerability/henry.html";
+"~^/tolerability/tolerability/henry.html$" "/doc/biology/2000-iapac-norvir/tolerability/henry.html";
+"~^/doc/tolerability/hirschhorntips.html$" "/doc/biology/2000-iapac-norvir/tolerability/hirschhorntips.html";
+"~^/doc/tolerability/royaltips.html$" "/doc/biology/2000-iapac-norvir/tolerability/royaltips.html";
+"~^/doc/urgnorvir.html$" "/doc/biology/2000-iapac-norvir/urgnorvir.html";
+"~^/doc/urgnorvirnr.html$" "/doc/biology/2000-iapac-norvir/urgnorvirnr.html";
+"~^/doc/design/index!$" "/doc/design/index";
+"~^/doc/philosophy/ethi$" "/doc/philosophy/ethics/index";
+"~^/doc/psychology/2020-bellet.pd%5Cf$" "/doc/psychology/2020-bellet.pdf";
+"~^/doc/1988-lee\.pdf.*$" "/doc/psychology/spaced-repetition/1988-lee.pdf";
+"~^/doc/sociology/2014-02-560$" "/doc/sociology/2014-02-25-matter-themanwhodestroyedamericasego.html";
+"~^/doc/statistics/decision/1961-raiffa-appliedstatisticaldecisiontheory.pdf.aspx$" "/doc/statistics/decision/1961-raiffa-appliedstatisticaldecisiontheory.pdf";
+"~^/doc/statistics/1987-jonker\.pdf.*$" "/doc/statistics/decision/1987-jonker.pdf";
+"~^/doc/philosophy/ethics/www/sites.duke.edu/edcd449b8941d8c1e67ecb49f29fdeeffc374299\.pdf.*$" "/doc/www/sites.duke.edu/edcd449b8941d8c1e67ecb49f29fdeeffc374299.pdf";
+"~^/doc/genetics/gametogenesis/www/www.hinxtongroup.org/cecde323fd74712ed54b63586d4ef2c4a210fb36\.pdf.*$" "/doc/www/www.hinxtongroup.org/cecde323fd74712ed54b63586d4ef2c4a210fb36.pdf";
+"~^/GPT--2$" "/gpt-2";
+"~^/Notes/LizardmanConstant$" "/notes/lizardman-constant";
+"~^/simulation-inferences.md$" "/simulation-inference.md";
+"~^/static/build/.%5C$" "/static/build/index";
+"~^/static/font/ibm-plex-mono/IBMPlexMono-BoldItalic$" "/static/font/ibm-plex-mono/IBMPlexMono-BoldItalic.otf";
+"~^/Turing-com-plete$" "/turing-complete";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/mraid.js$" "/static/404";
