--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -17740,6 +17740,121 @@
 "~^/static/build/.%5C$" "/static/build/index";
 "~^/static/font/ibm-plex-mono/IBMPlexMono-BoldItalic$" "/static/font/ibm-plex-mono/IBMPlexMono-BoldItalic.otf";
 "~^/Turing-com-plete$" "/turing-complete";
+"~^/.../special-forces-underground/index$" "/doc/rotten.com/library/conspiracy/special-forces-underground/index.html";
+"~^/tolerability/index$" "/doc/biology/2000-iapac-norvir/tolerability.html";
+"~^/static/template/include/pop-frame-title-annotation.tmpl$" "/static/404";
+"~^/on-seeing-through$" "/unseeing";
+"~^/doc/about.php$" "/about";
+"~^/doc/2008-abrahms.pdf\)%C2%.*$" "/doc/2008-abrahms.pdf";
+"~^/spaced-repetitionIf/Water.*$" "/spaced-repetition";
+"~^/The-Screwf.*$" "/screwfly";
+"~^/static/template/\$url\$.md$" "/static/404";
+"~^/static/img/avatar60.jpg$" "/static/404";
+"~^/static/img/art/diana/image3.jpg$" "/doc/rotten.com/library/bio/royalty/britain/lady-diana/index.html";
+"~^/static/img/art/diana/image1.jpg$" "/doc/rotten.com/library/bio/royalty/britain/lady-diana/index.html";
+"~^/On-Seeing-Through$" "/unseeing";
+"~^/.*fiction/Genshiken$" "fiction/genshiken";
+"~^/.*/Arias-past-present-and-future$" "/aria";
+"~^/GPT-2-Neural-Network-Poetry$" "/gpt-2";
+"~^//.git2/config$" "/.git/config";
+"~^/.*/Lithium$" "/lithium";
+"~^/doc/statistics/lbr.*$" "/doc/statistics/index";
+"~^/doc/statistics/decision/1957-box.pd\..*$" "/doc/statistics/decision/1957-box.pdf";
+"~^/doc/.*/The-Buddhas-Wheel$" "/fiction/the-buddhas-wheel";
+"~^/doc/psychology/2008-evans.pdfcheckthe9th.*$" "/doc/psychology/2008-evans.pdf#page=9";
+"~^/doc/iq/ses/1973-herrnstein-iqinthemeritocracy.pdfI.*$" "/doc/iq/ses/1973-herrnstein-iqinthemeritocracy.pdf";
+"~^/doc/gan/2019-03-01--stylegan-twdne-64bestsamples.jpg$" "/doc/ai/nn/gan/stylegan/anime/2019-03-01-gwern-stylegan-twdne-64bestsamples.jpg";
+"~^/doc/dual-n-back/www/www.klingberglab.se/d4c24e23ad2fad6c36c6158a6217175855b86dae\.pdf.*$" "/static/404";
+"~^/doc/darknet-market/silk-road/1/=3D\?topic.*$" "/doc/darknet-market/silk-road/1/index";
+"~^/doc/borges/1936-borges-ahistoryofeternity.pdf\..*$" "/doc/borges/1936-borges-ahistoryofeternity.pdf";
+"~^/.*BAF19D6DFC2CE432C393AC5C1AF90.*$$" "https://libgen.rs/book/index.php?md5=7BAF19D6DFC2CE432C393AC5C1AF9031";
+"~^/doc/book/index.php\?md5=7BAF19D6DFC2CE432C393AC5C1AF9031&tlm=2014-01-04%2010:59:37$" "https://libgen.rs/book/index.php?md5=7BAF19D6DFC2CE432C393AC5C1AF9031";
+"~^/doc/ai/poetry/2019-12-16-gpt21.Qk.*$" "/doc/ai/poetry/2019-12-16-gpt21.5b-poetry-samples-topp080.txt";
+"~^/doc/ai/dali/20210625-dalipromptbook\.pdf.*$" "https://dallery.gallery/the-dalle-2-prompt-book/";
+"~^/Danbooru2021\?.*$" "/danbooru2021";
+"~^/danbooru2020/.*$" "/danbooru2020";
+"~^/ab/$" "/ab-testing";
+"~^/doc/ai/scali$" "/doc/ai/scaling/index";
+"~^/tolerability/adherence.html$" "/doc/biology/2000-iapac-norvir/adherence.html";
+"~^/tolerability/committee.html$" "/doc/biology/2000-iapac-norvir/committee.html";
+"~^/tolerability/consequences.html$" "/doc/biology/2000-iapac-norvir/consequences.html";
+"~^/tolerability/description.html$" "/doc/biology/2000-iapac-norvir/description.html";
+"~^/doc/faqina.html$" "/doc/biology/2000-iapac-norvir/faqina.html";
+"~^/doc/biology/about/faqina.html$" "/doc/biology/2000-iapac-norvir/faqina.html";
+"~^/tolerability/help.html$" "/doc/biology/2000-iapac-norvir/help.html";
+"~^/tolerability/links.html$" "/doc/biology/2000-iapac-norvir/links.html";
+"~^/tolerability/list.html$" "/doc/biology/2000-iapac-norvir/list.html";
+"~^/tolerability/otherreg.html$" "/doc/biology/2000-iapac-norvir/otherreg.html";
+"~^/tolerability/physref.html$" "/doc/biology/2000-iapac-norvir/physref.html";
+"~^/tolerability/portability.html$" "/doc/biology/2000-iapac-norvir/portability.html";
+"~^/tolerability/search.html$" "/doc/biology/2000-iapac-norvir/search.html";
+"~^/tolerability/share.html$" "/doc/biology/2000-iapac-norvir/share.html";
+"~^/doc/softgelnr.html$" "/doc/biology/2000-iapac-norvir/softgelnr.html";
+"~^/tolerability/tolerability/abt_dintruff_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol1.html";
+"~^/tolerability/tolerability/abt_dintruff_tol2.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol2.html";
+"~^/tolerability/tolerability/butcher.html$" "/doc/biology/2000-iapac-norvir/tolerability/butcher.html";
+"~^/tolerability/tolerability/cohen.html$" "/doc/biology/2000-iapac-norvir/tolerability/cohen.html";
+"~^/tolerability/tolerability/dejar_alc.html$" "/doc/biology/2000-iapac-norvir/tolerability/dejar_alc.html";
+"~^/tolerability/tolerability/farthing.html$" "/doc/biology/2000-iapac-norvir/tolerability/farthing.html";
+"~^/tolerability/tolerability/hirschhorntips.html$" "/doc/biology/2000-iapac-norvir/tolerability/hirschhorntips.html";
+"~^/tolerability/tolerability/royaltips.html$" "/doc/biology/2000-iapac-norvir/tolerability/royaltips.html";
+"~^/tolerability/whatsnew.html$" "/doc/biology/2000-iapac-norvir/whatsnew.html";
+"~^/doc/cs/2007-drepper$" "/doc/cs/hardware/2007-drepper.pdf";
+"~^/doc/genetics/2017-amorim\.pdf.*$" "/doc/genetics/selection/2017-amorim.pdf";
+"~^/doc/genetics/selection/www.mountimprobable.com/about/assets/images/spire_darkeryellow.svg$" "/doc/genetics/selection/www.mountimprobable.com/assets/images/spire_darkeryellow.svg";
+"~^/doc/psychology/li$" "/doc/psychology/index";
+"~^/doc/ai/nn/transformer/www/aclanthology.org/e0ceee45b691fe5fa5c00ccba35a78fae6f334dd\.pdf.*$" "/doc/www/aclanthology.org/e0ceee45b691fe5fa5c00ccba35a78fae6f334dd.pdf";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/07c5a12c2be04479fa4f6f4565d14a015fc846ae\.pdf.*$" "/doc/www/arxiv.org/07c5a12c2be04479fa4f6f4565d14a015fc846ae.pdf";
+"~^/doc/reinforcement-learning/model/alphago/www/arxiv.org/0e20a793a720194f965fa89ee57521b9483496f7\.pdf.*$" "/doc/www/arxiv.org/0e20a793a720194f965fa89ee57521b9483496f7.pdf";
+"~^/doc/newsletter/fiction/gene-wolfe/suzanne-delage/2023-10-28-gwern-midjourneyv5-germanexpressionistlinocutofsinisternewenglandtowninwinter-thumbnail-red.jpg/doc/cs/algorithm/www/arxiv.org/1ded642838f7b6a9e3c92d552993bfa6caeb23df\.pdf.*$" "/doc/www/arxiv.org/1ded642838f7b6a9e3c92d552993bfa6caeb23df.pdf";
+"~^/doc/cs/algorithm/www/arxiv.org/20081b6837ba99ef83028f9ba787551ea592c4e3\.pdf.*$" "/doc/www/arxiv.org/20081b6837ba99ef83028f9ba787551ea592c4e3.pdf";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/2d0f821f30901fd04611ff763ab05e371b464e27\.pdf.*$" "/doc/www/arxiv.org/2d0f821f30901fd04611ff763ab05e371b464e27.pdf";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/3fc46729c1b0d85e3b7a13780129449bcb5f5aa9\.pdf.*$" "/doc/www/arxiv.org/3fc46729c1b0d85e3b7a13780129449bcb5f5aa9.pdf";
+"~^/doc/reinforcement-learning/scaling/www/arxiv.org/404233e99de98f699e9d84e002e2099b202d2959\.pdf.*$" "/doc/www/arxiv.org/404233e99de98f699e9d84e002e2099b202d2959.pdf";
+"~^/doc/reinforcement-learning/imperfect-information/poker/www/arxiv.org/480bb791e29b7babafe19ae3ecfebd0efd7bdd06\.pdf.*$" "/doc/www/arxiv.org/480bb791e29b7babafe19ae3ecfebd0efd7bdd06.pdf";
+"~^/doc/reinforcement-learning/model/alphago/www/arxiv.org/53d0cd1ffa3d15dd30c849cb37a4449769a3a42f\.pdf.*$" "/doc/www/arxiv.org/53d0cd1ffa3d15dd30c849cb37a4449769a3a42f.pdf";
+"~^/doc/philosophy/mind/www/arxiv.org/653054dd500dc137506240c961a018be643b44c3\.pdf.*$" "/doc/www/arxiv.org/653054dd500dc137506240c961a018be643b44c3.pdf";
+"~^/doc/cs/cellular-automaton/www/arxiv.org/6578511430ba5369dd0e9e2e7977ac7d3098da33\.pdf.*$" "/doc/www/arxiv.org/6578511430ba5369dd0e9e2e7977ac7d3098da33.pdf";
+"~^/doc/cs/cellular-automaton/www/arxiv.org/69e90abaa70a62a400ceafc6cd31846e6ec2eeba\.pdf.*$" "/doc/www/arxiv.org/69e90abaa70a62a400ceafc6cd31846e6ec2eeba.pdf";
+"~^/doc/statistics/probability/www/arxiv.org/768fc0dc4671506a50eba77c3f45a6709ddfbcc4\.pdf.*$" "/doc/www/arxiv.org/768fc0dc4671506a50eba77c3f45a6709ddfbcc4.pdf";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/814f1f93c7c949872c1bb4d19119ed826e231a15\.pdf.*$" "/doc/www/arxiv.org/814f1f93c7c949872c1bb4d19119ed826e231a15.pdf";
+"~^/doc/cs/cellular-automaton/www/arxiv.org/873f96b20c16d941d827960034c0d9c045c64e2e\.pdf.*$" "/doc/www/arxiv.org/873f96b20c16d941d827960034c0d9c045c64e2e.pdf";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/913194bb464302f9aa1e7c8ffc23339746f8407f\.pdf.*$" "/doc/www/arxiv.org/913194bb464302f9aa1e7c8ffc23339746f8407f.pdf";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/99eafff732c63e3fe5a92fbff66d6cdef802ceea\.pdf.*$" "/doc/www/arxiv.org/99eafff732c63e3fe5a92fbff66d6cdef802ceea.pdf";
+"~^/doc/reinforcement-learning/scaling/www/arxiv.org/9decce9c7af813d74bd2aaceaf371f6bc7d3f1c3\.pdf.*$" "/doc/www/arxiv.org/9decce9c7af813d74bd2aaceaf371f6bc7d3f1c3.pdf";
+"~^/doc/reinforcement-learning/model/alphago/www/arxiv.org/cacec06b2a9c3a1f5e8a9cc60560d16e28470e9b\.pdf.*$" "/doc/www/arxiv.org/cacec06b2a9c3a1f5e8a9cc60560d16e28470e9b.pdf";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/d322327025b0b942f5cfd578e33588d65e73f2d4\.pdf.*$" "/doc/www/arxiv.org/d322327025b0b942f5cfd578e33588d65e73f2d4.pdf";
+"~^/doc/reinforcement-learning/safe/www/arxiv.org/da3a10f1e3f65f9871afae10e2349dbceaf32f5b\.pdf.*$" "/doc/www/arxiv.org/da3a10f1e3f65f9871afae10e2349dbceaf32f5b.pdf";
+"~^/doc/reinforcement-learning/scaling/www/arxiv.org/dc5e847727ef4250dc9db1b8d854c3d3528ea2cb\.pdf.*$" "/doc/www/arxiv.org/dc5e847727ef4250dc9db1b8d854c3d3528ea2cb.pdf";
+"~^/doc/reinforcement-learning/scaling/www/arxiv.org/f1c2f4307ac2fe37d09edc9c7d1eb593be463640\.pdf.*$" "/doc/www/arxiv.org/f1c2f4307ac2fe37d09edc9c7d1eb593be463640.pdf";
+"~^/doc/economics/copyright/www/brenthecht.com/595a7563f781671544119ad9d47fcc35ac6335b2\.pdf.*$" "/doc/www/brenthecht.com/595a7563f781671544119ad9d47fcc35ac6335b2.pdf";
+"~^/doc/cs/computable/www/cdn.oreillystatic.com/7a1a0c1440ce8cfd319bcf91b5c81bf6a35073d2\.pdf.*$" "/doc/www/cdn.oreillystatic.com/7a1a0c1440ce8cfd319bcf91b5c81bf6a35073d2.pdf";
+"~^/doc/sociology/www/files.eric.ed.gov/f6b4c2e80ab4f1e57b9ffbe46cc0377dbd45a624\.pdf.*$" "/doc/www/files.eric.ed.gov/f6b4c2e80ab4f1e57b9ffbe46cc0377dbd45a624.pdf";
+"~^/doc/ai/anime/danbooru/www/lllyasviel.github.io/ddf92beec7ef7c505f3061bfb88fc8f4ab8a0eb5\.pdf.*$" "/doc/www/lllyasviel.github.io/ddf92beec7ef7c505f3061bfb88fc8f4ab8a0eb5.pdf";
+"~^/doc/darknet-market/silk-road/1/www/maps.org/50c04b33e3fd2417b016bd56665e024b212411b8\.pdf.*$" "/doc/www/maps.org/50c04b33e3fd2417b016bd56665e024b212411b8.pdf";
+"~^/doc/ai/nn/sparsity/www/openreview.net/6b93a92a7bf3cf02f69fc18645adffe6f9c7a2a3\.pdf.*$" "/doc/www/openreview.net/6b93a92a7bf3cf02f69fc18645adffe6f9c7a2a3.pdf";
+"~^/doc/ai/nn/sparsity/www/openreview.net/def6062fd7713a882d9d8a4577b7f9b0d0ea3ac9\.pdf.*$" "/doc/www/openreview.net/def6062fd7713a882d9d8a4577b7f9b0d0ea3ac9.pdf";
+"~^/doc/ai/video/generation/www/openreview.net/e912f4fc0f9b1b10607b9717d01b50e3290d5b17\.pdf.*$" "/doc/www/openreview.net/e912f4fc0f9b1b10607b9717d01b50e3290d5b17.pdf";
+"~^/doc/cs/algorithm/www/proceedings.mlr.press/ffc205d2c6c2a415641f822e0c909bd847352e99\.pdf.*$" "/doc/www/proceedings.mlr.press/ffc205d2c6c2a415641f822e0c909bd847352e99.pdf";
+"~^/doc/ai/nn/sparsity/knowledge-distillation/www/www.cs.cornell.edu/497cc54f77fac7a4f339c850c41a6b928bd80209\.pdf.*$" "/doc/www/www.cs.cornell.edu/497cc54f77fac7a4f339c850c41a6b928bd80209.pdf";
+"~^/doc/iq/high/smpy/www/www.journalofexpertise.org/9dae9613807c54439c8764893e1166caa9b7e267\.pdf.*$" "/doc/www/www.journalofexpertise.org/9dae9613807c54439c8764893e1166caa9b7e267.pdf";
+"~^/doc/darknet-market/silk-road/1/www/www.justice.gov/2e8f283411a15fb2d2dd70e3f189a132d088862f\.pdf.*$" "/doc/www/www.justice.gov/2e8f283411a15fb2d2dd70e3f189a132d088862f.pdf";
+"~^/doc/darknet-market/silk-road/1/www/www.justice.gov/479c0d255352c7817ae3b1546bcd02513c577c09\.pdf.*$" "/doc/www/www.justice.gov/479c0d255352c7817ae3b1546bcd02513c577c09.pdf";
+"~^/doc/darknet-market/silk-road/1/www/www.justice.gov/99efd4ce9f03ee4308ca24177c4a640bad369f52\.pdf.*$" "/doc/www/www.justice.gov/99efd4ce9f03ee4308ca24177c4a640bad369f52.pdf";
+"~^/doc/darknet-market/silk-road/1/www/www.justice.gov/b3952121f7de0fb83110047ba04bd1f839ba2981\.pdf.*$" "/doc/www/www.justice.gov/b3952121f7de0fb83110047ba04bd1f839ba2981.pdf";
+"~^/doc/nootropic/caffeine/www/www.scicompdf.se/3a800688788b5d32fb5ae4b4ff250bcb2fd234b5\.pdf.*$" "/doc/www/www.scicompdf.se/3a800688788b5d32fb5ae4b4ff250bcb2fd234b5.pdf";
+"~^/GPT-3IBM$" "/gpt-3";
+"~^/GPTs3$" "/gpt-3";
+"~^/review/Cat$" "/review/cat";
+"~^/review/cat-sense.md$" "/reviews/cat.md";
+"~^/search=q$" "/search";
+"~^/static/font/EngraversOldEnglish-Bold.ttf$" "/static/font/blackletter/EngraversOldEnglish-Bold.ttf";
+"~^/static/font/dropcap/dropcat/dark/B-1-small-2x.png$" "/static/font/dropcap/dropcat/dark/B-dark-1-small-2x.png";
+"~^/favicon$" "/static/img/favicon.png";
+"~^/darkmode.js$" "/static/js/dark-mode.js";
+"~^/zeo/0$" "/zeo/index";
+"~^/RTX.*$" "/rtx";
+"~^/.*[Rr]esiniferatoxin.*$" "/rtx";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/mraid.js$" "/static/404";
