--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11473,3 +11473,11 @@ default "";
 "~^/doc/iq/2010-campbell.pdf.*$" "/doc/iq/ses/2010-campbell.pdf";
 "~^/doc/genetics/heritable/1994-betsworth.pdf.*$" "/doc/genetics/heritable/adoption/1994-betsworth.pdf";
 "~^/doc/darknet-market/2021-boekhoudt.pdf.*$" "/doc/darknet-market/dnm-archive/2021-boekhoudt.pdf";
+"~^/doc/statistics/decision/2001-garille.pdf.*$" "/doc/statistics/decision/stigler-diet/2001-garille.pdf";
+"~^/doc/statistics/decision/1945-stigler.pdf.*$" "/doc/statistics/decision/stigler-diet/1945-stigler.pdf";
+"~^/doc/statistics/decision/1990-dantzig.pdf.*$" "/doc/statistics/decision/stigler-diet/1990-dantzig.pdf";
+"~^/doc/science/1995-dunitz.pdf.*$" "/doc/science/chemistry/disappearing-polymorph/1995-dunitz.pdf";
+"~^/doc/science/1960-campbell.pdf.*$" "/doc/science/chemistry/disappearing-polymorph/1960-campbell.pdf";
+"~^/doc/science/1950-kohman.pdf.*$" "/doc/science/chemistry/disappearing-polymorph/1950-kohman.pdf";
+"~^/doc/science/1997-appendino.pdf.*$" "/doc/science/chemistry/1997-appendino.pdf";
+"~^/doc/science/2004-distasi.pdf.*$" "/doc/science/chemistry/2004-distasi.pdf";
