--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -17855,6 +17855,7 @@
 "~^/zeo/0$" "/zeo/index";
 "~^/RTX.*$" "/rtx";
 "~^/.*[Rr]esiniferatoxin.*$" "/rtx";
+"~^/doc/statistics/bias/2024-cobb.pdf.*$" "/doc/statistics/bias/2023-cobb.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/mraid.js$" "/static/404";
