--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11481,3 +11481,6 @@ default "";
 "~^/doc/science/1950-kohman.pdf.*$" "/doc/science/chemistry/disappearing-polymorph/1950-kohman.pdf";
 "~^/doc/science/1997-appendino.pdf.*$" "/doc/science/chemistry/1997-appendino.pdf";
 "~^/doc/science/2004-distasi.pdf.*$" "/doc/science/chemistry/2004-distasi.pdf";
+"~^/doc/statistics/bias/1987-eichorn.pdf.*$" "/doc/statistics/bias/publication/miscitation/1987-eichorn.pdf";
+"~^/doc/statistics/bias/1995-hoerman.pdf.*$" "/doc/statistics/bias/publication/miscitation/1995-hoerman.pdf";
+"~^/doc/statistics/bias/2023-cobb.pdf.*$" "/doc/statistics/bias/publication/miscitation/2023-cobb.pdf";
